k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qanova-tests
  labels:
    name: qanova-tests
