k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qanova-tests-service
  namespace: qanova-tests
spec:
  selector:
    app: qanova-tests
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
